@@ -1,6 +1,6 @@
 /*  bam_ampliconclip.h -- shared functions between amplicon clip/stats
 
-    Copyright (C) 2020 Genome Research Ltd.
+    Copyright (C) 2020-2021 Genome Research Ltd.
 
     Author: James Bonfield <jkb@sanger.ac.uk>
 
